# llama-server-home

./: .gitignore  README.md  controller.yaml  controller.yaml.tmp  node.yaml  node.yaml.tmp  pyproject.toml  schema.md
docs/plans/: 2026-04-23-hardening-and-refactoring.md
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: Sidebar.vue
frontend/src/composables/: useConfirm.ts  useDateFormat.ts  usePolling.ts  useStatusColor.ts
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/views/: CreateInstanceForm.vue  CreateInstanceTask.vue  InstanceGroups.vue  Instances.vue  Login.vue  Metrics.vue  NfsManager.vue  Nodes.vue  TaskManager.vue
src/lsh/controller/: app.py  cmd.py  lib.py
src/lsh/controller/app/: instance_groups.py  instances.py  main.py  nfs.py  nodes.py  tasks.py  user.py  utils.py
src/lsh/node/: cmd.py  lib.py  metrics.py
src/lsh/repo/: metrics.py  node.py
src/lsh/utils/: path_helper.py  schema.py
